# ec_mission_submit

./: .clang-format  .gitignore  .mxproject  .ninja_deps  .ninja_log  1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  Aa.cpp  Breath.uvoptx  Breath.uvprojx  Breathe.uvprojx  CMakeCache.txt  CMakeLists.txt  CanMotors.ioc  DapLink.cfg  FreeRTOSTutorial.ioc  HUXIDENG.ioc  PinyExam.code-workspace  QWE.ioc  README.md  arm-toolchain.md  build.ninja  chengfabiao.cpp  cmake_install.cmake  compile_commands.json  duoji2.ioc  duoji3.ioc  fuck.ioc  gongyueshu.cpp  hom题目1，2.cpp.txt  hom题目3.cpp.txt  hom题目4.cpp.txt  hom题目5.cpp  install.md  jlink.cfg  num.cpp  nums.cpp  (+50 more)
1/: 1.cpp
2/: 2.1.cpp  2.2.cpp
3/: 3.cpp
4/: 4.cpp
5.1/: 5.1.cpp
5.2/: 5.2.cpp
5.3/: 5.3.cpp
CanTemplate/: CMakeLists.txt  CanTemplate.ioc
Demo/: .mxproject  Demo.ioc
Freertos_basic/: CMakeLists.txt  Freertos.basic.ioc
Inc/: main.h
Misson_Task/: task1.cpp  task2.cpp
PinyExam/: .mxproject  CMakeLists.txt  CanMotors.ioc
PinyExam/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
PinyExam/Core/Src/: can.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
PinyExam/UserCodes/App/: App.cpp
PinyExam/UserCodes/App/Gimbal/: Gimbal.cpp  Gimbal.hpp
PinyExam/UserCodes/App/QuadriCycle/: QuadriCycle.cpp  QuadriCycle.hpp
PinyExam/UserCodes/Bsp/BspDma/: BspDma.hpp
PinyExam/UserCodes/Bsp/BspUart/: BspUart.cpp
PinyExam/UserCodes/Extension/BMI088/: Middleware.cpp  Middleware.hpp
PinyExam/UserCodes/Extension/INS/: INS.hpp  README.md
PinyExam/UserCodes/Extension/INS/Algorithm/Calibrate/: CaliParamsDefs.hpp  calibrate.hpp
PinyExam/UserCodes/Extension/INS/Algorithm/DcmAHRS/: DcmAHRS.cpp  DcmAHRS.hpp
PinyExam/UserCodes/Extension/INS/Algorithm/MahonyAHRS/: MahonyAHRS.cpp
PinyExam/UserCodes/Extension/Motors/: DMMotors.cpp  DMMotors.hpp
PinyExam/UserCodes/Extension/RemoteCtrl/: DT7.hpp  DT7Msg.hpp
PinyExam/UserCodes/Math/CommenMarcros/: CalcuNeed.cpp  CalcuNeed.hpp
PinyExam/UserCodes/Math/Matrix/: Matrix.hpp
PinyExam/UserCodes/Math/PID/: Pid.hpp
PinyExam/cmake/: freertos.cmake
QWE/: QWE.ioc
RTOS4/: CMakeLists.txt  RTOS4.ioc
Src/: main.c  tim.c
User/: LEDController.cpp  LEDController.hpp  USB.cpp  USB.hpp
UserCodes/: CMakeLists.txt  CanMotors.cpp  PinyExam.cpp  PinyExam.hpp
UserCodes/App/: App.cpp  App.hpp
UserCodes/App/DM-IMU/: DmImu.cpp  DmImu.hpp
UserCodes/App/Gimbal/: Gimbal.cpp  Gimbal.hpp
UserCodes/App/QuadriCycle/: QuadriCycle.cpp  QuadriCycle.hpp
UserCodes/Bsp/: BspCan.cpp
UserCodes/Bsp/BspCan/: BspCan.cpp  BspCan.hpp
UserCodes/Bsp/BspDma/: BspDma.cpp
UserCodes/Bsp/BspSpi/: Bsp_spi.cpp  Bsp_spi.hpp
UserCodes/Bsp/BspUart/: BspUart.hpp
UserCodes/Extension/BMI088/: Bmi088.cpp  Bmi088.hpp
UserCodes/Extension/Dwt/: Dwt.cpp  Dwt.hpp
UserCodes/Extension/INS/: INS.cpp  Kconfig
UserCodes/Extension/INS/Algorithm/Calibrate/: README.md  calibrate.cpp
UserCodes/Extension/INS/Algorithm/Calibrate/AccelCali/: AccelCali.cpp  AccelCali.hpp
UserCodes/Extension/INS/Algorithm/MahonyAHRS/: MahonyAHRS.hpp
UserCodes/Extension/Motors/: DMMotors.cpp  DMMotors.hpp  Motors.cpp  Motors.hpp
UserCodes/Extension/RemoteCtrl/: DT7.cpp  DT7.hpp
UserCodes/Math/Matrix/: Matrix.hpp
UserCodes/Math/PID/: Pid.cpp
UserCodes/PID/: Pid.hpp
c++/: task.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
cmake/: freertos.cmake  gcc-arm-none-eabi.cmake
duoji/: .mxproject  CMakeLists.txt  teach.ioc
ec_mission_submit/: .mxproject  CMakeLists.txt  ProPrj_12V—5V降压元件_2025-09-23.epro  task5.cpp  test1.ioc  千行计划习题1.cpp  千行计划题目四.cpp
pqw/: .mxproject  CMakeLists.txt  RTOS3.ioc
qianxing/: Test.cpp  subject_1.cpp  subject_2.cpp  subject_5.cpp
servo/: servo.ioc
(+710 files in other folders)
